--- a/index.css
+++ b/index.css
@@ -112,7 +112,7 @@ header {
 }
 
 hr {
-    margin-bottom: 80px;
+    margin-bottom: 100px;
 }
 
 .bi-question-circle, .bi-list, .bi-moon-fill {
@@ -142,16 +142,11 @@ hr {
     justify-content: center;
     align-items: center;
     font-size: 30px;
-
 }
 
 /*keyboard section*/
 
 .keyboard {
-    position: fixed;
-    bottom: 5%;
-    left: 50%;
-    transform: translateX(-50%);
     margin-top: 5%;
     margin-right: 30px;
 }
@@ -238,8 +233,6 @@ hr {
     margin-right: auto;
 }
 
-
-
 /*animations*/
 
 .flip {
@@ -287,4 +280,65 @@ hr {
 }
 
 
+/*media queries*/
 
+@media (max-height: 860px) {
+
+    hr {
+        margin-bottom: 60px;
+    }
+
+    .keyboard {
+        margin-top: 3%;
+        margin-right: 30px;
+    }
+
+}
+
+@media (max-height: 780px) {
+    .key {
+        background-color: #CDD0D5;
+        padding: 13px 13px;
+        border-radius: 5px;
+        font-weight: 700;
+        border-style: none;
+        cursor: pointer;
+    }
+}
+
+@media (max-height: 733px) {
+    .box {
+        border-style: solid;
+        border-color: #CDD0D5;
+        height: 3rem;
+        width: 3rem;
+        margin-bottom: 2px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+    }
+}
+
+@media (max-width: 733px) {
+    .box {
+        border-style: solid;
+        border-color: #CDD0D5;
+        height: 3rem;
+        width: 3rem;
+        margin-bottom: 2px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+    }
+
+    .key {
+        background-color: #CDD0D5;
+        padding: 13px 13px;
+        border-radius: 5px;
+        font-weight: 700;
+        border-style: none;
+        cursor: pointer;
+    }
+}
